syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.jexpress.demo.grpc.proto.generated1";
option java_outer_classname = "Hello1Proto";

package hello1.rpc;

service Hello1Service {
    rpc hello1(Hello1Request) returns (Hello1Response);
}

message Hello1Request {
    string firstName = 1;
    string lastName = 2;
}

message Hello1Response {
    string greeting = 1;
}